# prop13-data

./: .gitignore  AssessmentDataDTO.py  ParcelDataDTO.py  README.md  download.sh  main.py  pyproject.toml
converters/: SFCountyRecordConverter.py
database/: db_connection_setup.py  parcel_insert.py
script/: download.sh  make_tiles.sh
