[tool.poetry]
name = "prop13-data"
version = "0.1.0"
description = "data loading for prop13 property assessment data"
authors = ["Volunteers from TechEquity collaborative <matt@techequitycollaborative.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simple-term-menu = "^1.6.1"
PyInputPlus = "^0.2.12"
SQLAlchemy = "^2.0.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
